# RoIAlign-RoIPool-pytorch

./: README.md
roialign/: CMakeLists.txt  main.cpp  roi_align.py  roi_align_binding.cpp  roi_align_cpu.cpp  roi_align_cuda.cpp  roi_align_kernel.cu  setup.py  temp.h
roipool/: CMakeLists.txt  main.cpp  roi_pool.py  roi_pool_binding.cpp  roi_pool_cpu.cpp  roi_pool_cuda.cpp  roi_pool_kernel.cu  setup.py  temp.h
